CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (HANDYSTATS_BENCHMARKS)

ADD_CUSTOM_TARGET (benchmarks)

# Handystats
SET (BENCHMARKS_LIBRARIES ${HANDYSTATS_LIBRARY})

# Threads
FIND_PACKAGE (Threads)
IF (Threads_FOUND)
	INCLUDE_DIRECTORIES (${Threads_INCLUDE_DIR})
	LIST (APPEND BENCHMARKS_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
ELSE ()
	MESSAGE (WARNING "Threads package is not found (required for benchmarks)")
	RETURN ()
ENDIF ()

FIND_PACKAGE (Boost COMPONENTS program_options)
IF (Boost_PROGRAM_OPTIONS_FOUND)
	INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIR})
	LIST (APPEND BENCHMARKS_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY})
ELSE ()
	MESSAGE (WARNING "Boost program_options package is not found (required for benchmarks)")
	RETURN ()
ENDIF ()

INCLUDE_DIRECTORIES (BEFORE ${HANDYSTATS_INCLUDE_DIR})

SET (BENCHMARKS_LINK_FLAGS "-Wl,-rpath,${HANDYSTATS_LIBRARY_OUTPUT_DIR}")
SET (BENCHMARKS_PROPERTIES PROPERTIES LINK_FLAGS "${BENCHMARKS_LINK_FLAGS}" LINKER_LANGUAGE CXX)

ADD_EXECUTABLE (load EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/load.cpp)
SET_TARGET_PROPERTIES (load ${BENCHMARKS_PROPERTIES})
TARGET_LINK_LIBRARIES (load ${BENCHMARKS_LIBRARIES})
ADD_DEPENDENCIES (benchmarks load)

FILE (COPY run_load.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
