CMAKE_MINIMUM_REQUIRED (VERSION 2.8)


FIND_PACKAGE (Threads REQUIRED)
INCLUDE_DIRECTORIES (${Threads_INCLUDE_DIR})


# GTest
FIND_PACKAGE (GTest)

IF (NOT GTEST_FOUND)
		FIND_PATH (GTEST_SRC_DIR src/gtest_main.cc HINTS /usr/src/gtest)
		FIND_PATH (GTEST_INCLUDE_DIRS gtest.h HINTS /usr/include/gtest)
		IF (GTEST_SRC_DIR AND GTEST_INCLUDE_DIRS)
			MESSAGE (STATUS "GTest source package found. Compiling...")
			ADD_SUBDIRECTORY (${GTEST_SRC_DIR} ${CMAKE_BINARY_DIR}/gtest EXCLUDE_FROM_ALL)
			SET (GTEST_FOUND 1)
			SET (GTEST_MAIN_LIBRARIES ${CMAKE_BINARY_DIR}/gtest/libgtest_main.a)
			SET (GTEST_LIBRARIES ${CMAKE_BINARY_DIR}/gtest/libgtest.a)
			SET (GTEST_BOTH_LIBRARIES ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES})
		ELSE (GTEST_SRC_DIR AND GTEST_INCLUDE_DIRS)
			MESSAGE (SEND_ERROR "Cannot find required package: GTest")
		ENDIF (GTEST_SRC_DIR AND GTEST_INCLUDE_DIRS)
ELSE (NOT GTEST_FOUND)
ENDIF (NOT GTEST_FOUND)

INCLUDE_DIRECTORIES (${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (${GTEST_SOURCE_DIR} ${GTEST_SOURCE_DIR}/include)

SET (GTEST_TARGETS gtest gtest_main)


ADD_CUSTOM_TARGET (check COMMAND ${CMAKE_CTEST_COMMAND} -V)


SET (TEST_LINK_FLAGS "-Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}:${CMAKE_CURRENT_BINARY_DIR}/../${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
SET (TEST_PROPERTIES PROPERTIES LINK_FLAGS "${TEST_LINK_FLAGS}" LINKER_LANGUAGE CXX)
SET (TEST_LIBRARIES ${GTEST_BOTH_LIBRARIES} ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})

FILE (GLOB_RECURSE gtest_src_files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.gtest.cpp")

FOREACH (gtest_src_file IN LISTS gtest_src_files)
	STRING (REGEX REPLACE "[.]gtest[.]cpp$" "_gtest" gtest_exec_file ${gtest_src_file})
	ADD_EXECUTABLE (${gtest_exec_file} EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/${gtest_src_file})
	SET_TARGET_PROPERTIES (${gtest_exec_file} ${TEST_PROPERTIES})
	TARGET_LINK_LIBRARIES (${gtest_exec_file} ${TEST_LIBRARIES})
	ADD_TEST (${gtest_exec_file} ${gtest_exec_file})
	ADD_DEPENDENCIES (${gtest_exec_file} ${GTEST_TARGETS})
	ADD_DEPENDENCIES (check ${gtest_exec_file})
ENDFOREACH (gtest_src_file)

# C-Binging test
SET (CBINDING_TEST_LINK_FLAGS "-Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}:${CMAKE_CURRENT_BINARY_DIR}/../${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
SET (CBINDING_TEST_PROPERTIES_CXX PROPERTIES LINK_FLAGS "${CBINDING_TEST_LINK_FLAGS}" LINKER_LANGUAGE CXX)
SET (CBINDING_TEST_PROPERTIES_C PROPERTIES LINK_FLAGS "${CBINDING_TEST_LINK_FLAGS}" LINKER_LANGUAGE C)
SET (CBINDING_TEST_LIBRARIES ${GTEST_LIBRARIES} ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})

ADD_LIBRARY (cbinding_test SHARED EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/c-binding/test.c)
SET_TARGET_PROPERTIES (cbinding_test ${CBINDING_TEST_PROPERTIES_C})
TARGET_LINK_LIBRARIES (cbinding_test ${CBINDING_TEST_LIBRARIES})

ADD_EXECUTABLE (cbinding_check EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/c-binding/check.cpp)
SET_TARGET_PROPERTIES (cbinding_check ${CBINDING_TEST_PROPERTIES_CXX})
TARGET_LINK_LIBRARIES (cbinding_check ${CBINDING_TEST_LIBRARIES} cbinding_test)

ADD_TEST(cbinding_check cbinding_check)
ADD_DEPENDENCIES (cbinding_check ${GTEST_TARGETS} cbinding_test)
ADD_DEPENDENCIES (check cbinding_check)
