CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (HANDYSTATS_UTILS)

IF (NOT WITH_UTILS)
	RETURN ()
ENDIF ()

FIND_PACKAGE (PythonInterp 2.6 REQUIRED)

# setup.py
SET (SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in")
SET (SETUP_PY "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
CONFIGURE_FILE (${SETUP_PY_IN} ${SETUP_PY})

IF (NOT DESTDIR)
	SET (DESTDIR $ENV{DESTDIR})
ENDIF ()

MESSAGE (STATUS "Install python scripts with --prefix=${DESTDIR}/${CMAKE_INSTALL_PREFIX}/bin")

ADD_CUSTOM_TARGET (utils_py ALL
	COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY} build_scripts
		--build-dir ${CMAKE_CURRENT_BINARY_DIR}
		--verbose
	COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY} clean
		--build-scripts ${CMAKE_CURRENT_BINARY_DIR}
		--verbose
	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
	)

INSTALL (CODE
	"EXECUTE_PROCESS (
		COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY} install_scripts
			--install-dir ${DESTDIR}/${CMAKE_INSTALL_PREFIX}/bin
			--verbose
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
		)"
	)

ADD_DEPENDENCIES (utils_py bindings_python)

ADD_CUSTOM_TARGET(utils ALL)
ADD_DEPENDENCIES (utils utils_py)
